--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -62,6 +63,7 @@
     "@storybook/react": "^7.0.4",
     "@storybook/react-webpack5": "^7.0.4",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@types/react-table": "^7.7.14",
     "babel-plugin-named-exports-order": "0.0.2",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.4",
